main.tf
// Define your resources here


resource "aws_vpc" "dev_vpc" {
  cidr_block = "10.123.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "Development VPC"
  }
}


resource "aws_security_group" "default_sg" {
  name        = "default_sg"
  description = "default ssh and http access from home"
  vpc_id      = aws_vpc.dev_vpc.id

  tags = {
    Name = "default_sg"
  }

}

resource "aws_vpc_security_group_ingress_rule" "allow_tls_ipv4" {
  security_group_id = aws_security_group.default_sg.id
  cidr_ipv4         = "72.163.220.0/24"
  from_port         = 443
  to_port           = 443
  ip_protocol       = "tcp"
}


resource "aws_vpc_security_group_ingress_rule" "allow_ssh_ipv4" {
  security_group_id = aws_security_group.default_sg.id
  cidr_ipv4         = "72.163.220.0/24"
  from_port         = 22
  to_port           = 22
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.default_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv6" {
  security_group_id = aws_security_group.default_sg.id
  cidr_ipv6         = "::/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
/*
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-*-24.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["ubuntu"] # Canonical
}
*/

resource "aws_subnet" "my_subnet" {
  vpc_id            = aws_vpc.dev_vpc.id
  cidr_block        = "10.123.10.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "tf-example"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.dev_vpc.id

  tags = {
    Name = "Development IGW"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.dev_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "Public Route Table"
  }
}

resource "aws_route_table_association" "public_rt_assoc" {
  subnet_id      = aws_subnet.my_subnet.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_iam_role" "ec2_role" {
  name = "ec2_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })

  tags = {
    SessionManagerRunAs = "ubuntu"
  }
}

resource "aws_iam_role_policy" "AWSVSCodeRemoteConnect" {
    name = "AWSVSCodeRemoteConnect"
    role = aws_iam_role.ec2_role.id

    policy =jsonencode({
      "Version": "2012-10-17",
      "Statement": [ {
          "Effect": "Allow",
          "Action": [
              "ssmmessages:CreateControlChannel",
              "ssmmessages:CreateDataChannel",
              "ssmmessages:OpenControlChannel",
              "ssmmessages:OpenDataChannel",
              "ssm:DescribeAssociation",
              "ssm:ListAssociations",
              "ssm:UpdateInstanceInformation"
          ],
          "Resource": "*"
      }
      ]
  })
}

resource "aws_iam_role_policy" "ec2_policy" {
  name = "ec2_policy"
  role = aws_iam_role.ec2_role.id

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = [
          "ec2:Describe*",
          "ec2:AttachVolume",
          "ec2:DetachVolume",
          "ec2:StartInstances",
          "ec2:StopInstances",
          "ec2:TerminateInstances"
        ]
        Effect = "Allow"
        Resource = "*"
      }
    ]
  })
}

resource "aws_iam_instance_profile" "ec2_instance_profile" {
  name = "ec2_instance_profile"
  role = aws_iam_role.ec2_role.name
}

resource "aws_instance" "studentperf" {
  ami                     = var.ami_id #data.aws_ami.ubuntu.id 
  instance_type           = var.instance_type
  vpc_security_group_ids  = [aws_security_group.default_sg.id]
  subnet_id               = aws_subnet.my_subnet.id
  associate_public_ip_address = true
  iam_instance_profile    = aws_iam_instance_profile.ec2_instance_profile.name
  key_name                = var.keypair_name

  ebs_block_device {
    device_name = "/dev/sda1"
    volume_size = 20
    volume_type = "gp2"
  }
  tags = {
    Name = "studentperf"
  }
}
